@@ -19,6 +19,9 @@
  */
 package org.apache.hama.bsp;
 
+import java.io.IOException;
+import java.util.ArrayList;
+
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
@@ -32,6 +35,14 @@ import org.apache.hama.Constants;
 import org.apache.hama.HamaCluster;
 import org.apache.hama.HamaConfiguration;
 import org.apache.hama.examples.ClassSerializePrinting;
+import org.apache.hama.zookeeper.QuorumPeer;
+import org.apache.zookeeper.CreateMode;
+import org.apache.zookeeper.KeeperException;
+import org.apache.zookeeper.WatchedEvent;
+import org.apache.zookeeper.Watcher;
+import org.apache.zookeeper.ZooKeeper;
+import org.apache.zookeeper.ZooDefs.Ids;
+import org.apache.zookeeper.data.Stat;
 
 public class TestBSPMasterGroomServer extends HamaCluster {
 
@@ -57,6 +68,14 @@ public class TestBSPMasterGroomServer extends HamaCluster {
   public void setUp() throws Exception {
     super.setUp();
   }
+
+  public void tearDown() throws Exception {
+    super.tearDown();
+  }
+
+  /*
+   * BEGIN: Job submission tests.
+   */
 
   public void testSubmitJob() throws Exception {
     BSPJob bsp = new BSPJob(configuration,
@@ -113,7 +132,71 @@ public class TestBSPMasterGroomServer extends HamaCluster {
     fileSys.delete(new Path(TMP_OUTPUT), true);
   }
 
-  public void tearDown() throws Exception {
-    super.tearDown();
+  /*
+   * END: Job submission tests.
+   */
+
+  /*
+   * BEGIN: ZooKeeper tests.
+   */
+
+  public void testClearZKNodes() throws IOException, KeeperException,
+      InterruptedException {
+
+    // Clear any existing znode with the same path as bspRoot.
+    bspCluster.getBSPMaster().clearZKNodes();
+
+    int timeout = configuration.getInt(Constants.ZOOKEEPER_SESSION_TIMEOUT,
+        6000);
+    String connectStr = QuorumPeer.getZKQuorumServersString(configuration);
+    String bspRoot = configuration.get(Constants.ZOOKEEPER_ROOT,
+        Constants.DEFAULT_ZOOKEEPER_ROOT);
+
+    // Establishing a zk session.
+    ZooKeeper zk = new ZooKeeper(connectStr, timeout, new Watcher() {
+      @Override
+      public void process(WatchedEvent event) {
+        // Do nothing.(Dummy Watcher)
+      }
+    });
+
+    // Creating dummy bspRoot if it doesn't already exist.
+    Stat s = zk.exists(bspRoot, false);
+    if (s == null) {
+      zk.create(bspRoot, new byte[0], Ids.OPEN_ACL_UNSAFE,
+          CreateMode.PERSISTENT);
+    }
+
+    // Creating dummy child nodes at depth 1.
+    String node1 = bspRoot + "/task1";
+    String node2 = bspRoot + "/task2";
+    zk.create(node1, new byte[0], Ids.OPEN_ACL_UNSAFE, CreateMode.PERSISTENT);
+    zk.create(node2, new byte[0], Ids.OPEN_ACL_UNSAFE, CreateMode.PERSISTENT);
+
+    // Creating dummy child node at depth 2.
+    String node11 = node1 + "/superstep1";
+    zk.create(node11, new byte[0], Ids.OPEN_ACL_UNSAFE, CreateMode.PERSISTENT);
+
+    ArrayList<String> list = (ArrayList<String>) zk.getChildren(bspRoot, false);
+    assertEquals(2, list.size());
+    System.out.println(list.size());
+
+    bspCluster.getBSPMaster().clearZKNodes();
+
+    list = (ArrayList<String>) zk.getChildren(bspRoot, false);
+    System.out.println(list.size());
+    assertEquals(0, list.size());
+
+    try {
+      zk.getData(node11, false, null);
+      fail();
+    } catch (KeeperException.NoNodeException e) {
+      System.out.println("Node has been removed correctly!");
+    }
   }
+
+  /*
+   * END: ZooKeeper tests.
+   */
+
 }
