@@ -13,6 +13,7 @@ Release 0.5 - Unreleased
 
   IMPROVEMENTS
 
+    HAMA-499: Refactor clearZKNodes() in BSPMaster (Apurv Verma via tjungblut)
     HAMA-485: Fill Counters with useful information (tjungblut)
     HAMA-497: Switch the trunk to Hadoop 1.0 based (edwardyoon) 
     HAMA-445: Make configurable checkpointing (Suraj Menon via edwardyoon)
